# cryptic-writings

./: .gitignore  CMakeLists.txt  README.md  build.sh
docs/: design.puml  objects.puml  sequence_diagram.puml
src/: CMakeLists.txt
src/client/: CMakeLists.txt  chat_core.cpp  chat_core.h  client_cli.cpp  client_endpoint.cpp  client_endpoint.h  client_gui.cpp  client_main.cpp  main_window.cpp  main_window.h  startup_form.cpp  startup_form.h
src/common/: types.h
src/server/: CMakeLists.txt  server.cpp  server_endpoint.cpp  server_endpoint.h  server_main.cpp
src/ui/: main_window.ui  startup_form.ui
